py2app 0.4.4
------------

py2app 0.4.4 is a ...

Features:
-

Bug fixes:
- Try both 'import Image' and 'from PIL import Image' in the PIL
  recipe.
  (Patch contributed by Christopher Barker)
- Fix for broken alias builds on MacOSX 10.6 (Snow Leopard)
  (Patch contributed by Jamer R Eagan)

py2app 0.4.3
------------

py2app 0.4.3 is a bugfix release

Bug fixes:
- A bad format string in build_app.py made it impossible to copy the
  Python framework into an app bundle.

py2app 0.4.2
------------

py2app 0.4.2 is a minor feature release

Features:

- When the '--strip' option is specified we now also remove '.dSYM' 
  directories from the bundle.

- Remove dependency on a 'version.plist' file in the python framework

- A new recipe for `PyQt`_ 4.x. This recipe was donated by Kevin Walzer.

- A new recipe for `virtualenv`_, this allows you to use py2app from 
  a virtual environment.

- Adds support for converting ``.xib`` files (NIB files for
  Interface Builder 3)

- Introduces an experimental plugin API for data converters. 

  A conversion plugin should be defined as an entry-point in the
  ``py2app.converter`` group::

       setup(
         ...
	 entry_points = {
		 'py2app.converter': [
		     "label          = some_module:converter_function",
		  ]
	  },
	  ...
      )

  The conversion function should be defined like this::

      from py2app.decorators import converts

      @converts('.png')
      def optimze_png(source, proposed_destionation, dryrun=0):
         # Copy 'source' to 'proposed_destination'
	 # The conversion is allowed to change the proposed
	 # destination to another name in the same directory.
         pass

.. `virtualenv`_: http://pypi.python.org/pypi/virtualenv

Buf fixes:

- This fixes an issue with copying a different version of Python over 
  to an app/plugin bundle than the one used to run py2app with.


py2app 0.4.0
------------

py2app 0.4.0 is a minor feature release (and was never formally released).

Features: